--- a/Country-Explorer-Project/country-explorer/index.html
+++ b/Country-Explorer-Project/country-explorer/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Country Explorer</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link href="/src/index.css" rel="stylesheet" />
+    <script async src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script defer type="module" src="/src/main.js"></script>
   </head>
   <body class="bg-gray-900 text-white">
